# hoverboard_ros

./: README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/hector_mapping/: HectorDebugInfo.h  HectorIterData.h
devel/lib/hector_compressed_map_transport/: map_to_image_node
devel/lib/hector_geotiff/: geotiff_node  geotiff_saver
devel/lib/hector_imu_attitude_to_tf/: imu_attitude_to_tf_node
devel/lib/hector_imu_tools/: pose_and_orientation_to_imu_node
devel/lib/hector_map_server/: hector_map_server
devel/lib/hector_trajectory_server/: hector_trajectory_server
devel/lib/hoverpibot_hardware_interface/: hoverpibot_hardware_interface_node  hoverpibotcpp
devel/lib/pkgconfig/: coral_img.pc  hector_compressed_map_transport.pc  hector_geotiff.pc  hector_geotiff_plugins.pc  hector_imu_attitude_to_tf.pc  hector_imu_tools.pc  hector_map_server.pc  hector_map_tools.pc  hector_mapping.pc  hector_marker_drawing.pc  hector_nav_msgs.pc  hector_slam_launch.pc  hector_trajectory_server.pc  hoverbot.pc  hoverpibot.pc  hoverpibot_hardware_interface.pc  rplidar_ros.pc  twist_mux.pc
devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
devel/lib/twist_mux/: twist_marker  twist_mux
devel/share/coral_img/cmake/: coral_imgConfig.cmake
devel/share/hector_compressed_map_transport/cmake/: hector_compressed_map_transportConfig.cmake
devel/share/hector_geotiff/cmake/: hector_geotiffConfig.cmake
devel/share/hector_geotiff_plugins/cmake/: hector_geotiff_pluginsConfig.cmake
devel/share/hector_imu_attitude_to_tf/cmake/: hector_imu_attitude_to_tfConfig.cmake
devel/share/hector_imu_tools/cmake/: hector_imu_toolsConfig.cmake
devel/share/hector_map_server/cmake/: hector_map_serverConfig.cmake
devel/share/hector_map_tools/cmake/: hector_map_toolsConfig.cmake
devel/share/hector_mapping/cmake/: hector_mapping-msg-extras.cmake  hector_mapping-msg-paths.cmake  hector_mappingConfig.cmake
devel/share/hector_marker_drawing/cmake/: hector_marker_drawingConfig.cmake
devel/share/hector_nav_msgs/cmake/: hector_nav_msgsConfig.cmake
devel/share/hoverbot/cmake/: hoverbotConfig.cmake
src/: README.md  hectorslam.diff  rplidar.diff
src/coral_img/: CMakeLists.txt  package.xml
src/coral_img/scripts/: facedetect.py  listenimg.py
src/hoverbot/: CMakeLists.txt  package.xml
src/hoverbot/launch/: manual_control.launch
src/hoverbot/scripts/: control.py
src/hoverpibot/: CMakeLists.txt  package.xml
src/hoverpibot/config/: teleop.yaml  twist_mux.yaml  twist_mux_topics.yaml
src/hoverpibot/launch/: manual_control.launch  twist_mux.launch
src/hoverpibot_hardware_interface/: CMakeLists.txt  mainpage.dox  manifest.xml
src/hoverpibot_hardware_interface/config/: controller_diff_drive.yaml  controllers.yaml  hardware.yaml  joint_limits.yaml
src/hoverpibot_hardware_interface/include/hoverpibot_hardware_interface/: hoverpibot_hardware.h  hoverpibot_hardware_interface.h
src/hoverpibot_hardware_interface/include/hoverpibotcpp/: hoverpibot.h
src/hoverpibot_hardware_interface/launch/: hoverpibot_diff_drive_controller.launch  hoverpibot_position_controllers.launch  hoverpibot_velocity_controllers.launch
src/hoverpibot_hardware_interface/src/: hoverpibot_hardware_interface.cpp  hoverpibot_hardware_interface_node.cpp  hoverpibotcpp.cpp
src/hoverpibot_hardware_interface/urdf/: hoverpibot.urdf.xacro  hoverpibot.urdf.xacro.bak
(+9 files in other folders)
